--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,95 @@
-version: 2.1
+# Ruby CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-ruby/ for more details
+#
+version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:4.8.2
+      # specify the version you desire here
+      - image: circleci/ruby:2.6.4-node-browsers
+        environment:
+          RAILS_ENV: test
+          PGHOST: 127.0.0.1
+          PGUSER: root
+          BUNDLER_VERSION: 2.0.2
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      - image: circleci/postgres:9.4
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: bistapo_test
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - run: echo "hello world"
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      # Bundler 2.0.2 にアップデートしたが、CircleCI で報告されているバグがあるため
+      # 下記の対応を入れて回避するようにしておく
+      # 参考URL：https://discuss.circleci.com/t/using-bundler-2-0-during-ci-fails/27411
+      - run:
+          name: setup bundler
+          command: |
+            sudo gem update --system
+            sudo gem uninstall bundler
+            sudo rm /usr/local/bin/bundle
+            sudo rm /usr/local/bin/bundler
+            sudo gem install bundler
+
+      - run:
+          name: install dependencies
+          command: |
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      # rubocop
+      - run:
+          name: rubocop
+          command: |
+            bundle exec rubocop
+
+      # brakeman
+      - run:
+          name: brakeman
+          command: |
+            bundle exec brakeman -z
+
+      # Database setup
+      - run: bundle exec rake db:create db:schema:load --trace
+      - run: bundle exec rake db:schema:load
+
+      # rspec
+      - run:
+          name: rspec
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+
+            bundle exec rspec \
+              --format progress \
+              --format RspecJunitFormatter \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES
+
+      # collect reports
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
